Crash when "creating" Video Sequencer on a new scene. #83869

Closed
opened 2020-12-16 23:01:27 +01:00 by Daniel Santana · 4 comments

{F9513905}System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-16 20:40, hash: 9f588432e9
Worked: (newest version of Blender that worked as expected)

Short description of error
Crash when switching to a Video Sequencer view on a second scene.

Exact steps for others to reproduce the error

  • Start Blender with factory defaults.
  • Create a new empty scene (should end up being called Scene.001)
  • Either try to create a Video Sequencer view, or try to add the Video Editing->Video Editing Workspace.

NOTE: Internally from debugging, I can see that the scene in the context passed to "draw_timeline_seq" is null, and this causes the crash in this function.

{[F9513905](https://archive.blender.org/developer/F9513905/blender.crash.txt)}**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-16 20:40, hash: `9f588432e9` Worked: (newest version of Blender that worked as expected) **Short description of error** Crash when switching to a Video Sequencer view on a second scene. **Exact steps for others to reproduce the error** - Start Blender with factory defaults. - Create a new empty scene (should end up being called Scene.001) - Either try to create a Video Sequencer view, or try to add the Video Editing->Video Editing Workspace. NOTE: Internally from debugging, I can see that the scene in the context passed to "draw_timeline_seq" is null, and this causes the crash in this function.
Author

Added subscriber: @dgsantana

Added subscriber: @dgsantana

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by d11b219d40

This issue was referenced by d11b219d40d7c72156fd11c335fde27212997957

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-12-17 02:20:25 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83869
No description provided.